# body-tracker

./: README.md  index.html  main.py  pyproject.toml  requirements.txt
frontend/: .gitignore  astro.config.mjs  package.json  tsconfig.json
frontend/src/components/: body_tracker.tsx  tmp.tsx
frontend/src/pages/: 404.astro
frontend/src/pages/[workout]/: [user_id].astro  tmp.astro
